--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "g4f-nix"]
-	path = g4f-nix
-	url = https://github.com/TheSaintDiratof/g4f-nix
-[submodule "llm_audit"]
-	path = llm_audit
-	url = https://github.com/TheSaintDiratof/llm_audit
+[submodule "llm_audit.pkgs"]
+	path = llm_audit.pkgs
+	url = https://github.com/TheSaintDiratof/llm_audit.pkgs
